# gonogo

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION_MAP.md  Dockerfile  LICENSE  README.md  alembic.ini  build.py  check_duplicates.py  conftest.py  data_quality_analysis.py  debug_scroll.html  docker-compose.yml  fix_tools_e501.py  github_issues_complete.json  inspect_placeholder_tests.py  process_test_e501.py  process_tools_e501.py  pyproject.toml  requirements.txt  restore_all_user_stories.py  rtm_matrix.html  rtm_report.html  rtm_report_capabilities.html  rtm_report_fixed.html  rtm_test.html  rtm_test_new.html  show_summary.py  test_associations.json  test_cleanup_recommendations.md  test_diagnosis.py  test_epics.html  test_functions.json  test_page.html  test_rtm_page.html  violations.txt
.claude/: daily-dev.md  documentation.md  emergency.md  settings.local.json  test-review.md  ux-ui-design.md
.do/: app.yaml  deploy.yaml
.github/: GITHUB_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  README.md  labels.yml  project-automation.md  setup-kanban.md  validate-templates.py
alembic/: env.py  script.py.mako
config/: metrics_thresholds.json  rtm-automation.yml
docs/: README.md  TEST_REORGANIZATION_PLAN.md  external_dependency_warning_monitoring.md
migrations/: add_epic_dependencies_table.py  add_epic_metrics_cache.py  add_epic_metrics_columns.py
quality/: DATABASE_GUIDE.md  DATABASE_INSPECTION_GUIDE.md  QUICK_REFERENCE.md  README.md  RTM_GUIDE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  archive_cleanup.sh
static/: README.md
tests/: conftest.py  rtm_test_runner.py
tools/: RESTORATION_README.md  __init__.py  add_epic_metrics_columns.py  add_test_markers.py  advanced_duplicate_analysis.py  analyze_database_schema.py  analyze_github_duplicates.py  analyze_test_associations.py  archive_cleanup.py  archive_management_demo.py  assign_user_story_components.py  audit_test_duplications.py  backup_manager.py  batch_update_issues.py  capability_mapping.py  check_dependency_updates.py  check_empty_fields.py  check_missing_components.py  check_restoration_readiness.py  check_us_013.py  clear_user_stories.py  collect_test_components.py  collect_test_functions.py  component_inheritance_cli.py  comprehensive_github_sync.py  create_epic_dependencies_table.py  db_inspector.py  debug_us_004.py  deduplication_system.py  demo_new_template_format.py  dynamic_rtm_demo.py  efficient_batch_update.py  epic_label_inheritance.py  failure_tracking_demo.py  find_next_unused_id.py  fix_broken_strings.py  fix_line_lengths.py  (+46 more)
(+336 files in other folders)
